--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^16.0.1",
